deployments/k8s/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dapr-replacepathregex
  namespace: dapr-system
spec:
  replacePathRegex:
    regex: ^/([a-zA-Z]*)(?i)\/(.*)$
    replacement: /v1.0/invoke/$1/method/$2
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: naas-replacepathregex
  namespace: nilorg
spec:
  replacePathRegex:
    regex: ^/(.*)$
    replacement: /v1.0/invoke/naas-api/method/$1
