deployments/k8s/dapr-pod-http.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naas-api
  namespace: nilorg
spec:
  selector:
    matchLabels:
      app: naas
      service: naas-api
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: naas
        service: naas-api
        version: v1
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "naas-api"
        dapr.io/app-protocol: "http"
        dapr.io/app-port: "8080"
    spec:
      restartPolicy: Always
      containers:
        - name: naas-api
          image: nilorg/naas:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-cm
              mountPath: /workspace/configs/
      volumes:
        - name: config-cm
          configMap:
            name: naas
