deployments/k8s/naas-admin-token-server.yaml
kind: Service
apiVersion: v1
metadata:
  name: naas-admin-token-server
  namespace: nilorg
  labels:
    app: naas-admin-token-server
spec:
  selector:
    app: naas-admin-token-server
  ports:
    - name: http-8081
      port: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: naas-admin-token-server
  namespace: nilorg
spec:
  selector:
    matchLabels:
      app: naas-admin
      service: naas-admin-token-server
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: naas-admin
        service: naas-admin-token-server
        version: v1
    spec:
      restartPolicy: Always
      containers:
        - name: naas-admin-token-server
          image: nilorg/naas-token-server:0.5.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
