deployments/k8s/naas-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: naas
  namespace: nilorg
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`naas.nilorg.com`)
      middlewares:
        - name: naas-replacepathregex
          namespace: nilorg
      services:
        - name: naas-api-dapr
          namespace: nilorg
          port: 80
